# binarylinalg

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  doxyfile.in
examples/: CMakeLists.txt  example_extend_check_matrix.c  example_solve_linear_system.c
include/: extend_check_matrix.h  matrix.h  solve_linear_system.h  utils.h
src/: CMakeLists.txt  extend_check_matrix.c  matrix.c  solve_linear_system.c  utils.c
tests/: CMakeLists.txt  test_extend_check_matrix.c  test_solve_linear_system.c
